welcome.lessons.welcome.instructions.InstructionsDrawG.scala.code
setCouleurBrosse(BLUE)
baisseBrosse()
gauche()
avance()
baisseBrosse()
avance()
baisseBrosse()
avance()
baisseBrosse()
avance()
baisseBrosse()
gauche()
avance()
baisseBrosse()
avance()
baisseBrosse()
avance()
baisseBrosse()
avance()
baisseBrosse()
gauche()
avance()
baisseBrosse()
avance()
baisseBrosse()
avance()
baisseBrosse()
avance()
baisseBrosse()
gauche()
avance()
baisseBrosse()
avance()
baisseBrosse()
gauche()
avance()
baisseBrosse()



